# BMR_WirelessGame

./: .gitignore  Cargo.toml  LISENCE  README.md  flash_and_build.ps1  flash_and_build.sh  only_build.sh  riscv-nuclei-elf-objcopy
src/: colors.rs  game.rs  gameboard.rs  i2c_ack.rs  main.rs  nunchuk.rs  scoreboard.rs  softi2c.rs  ws2812.rs
src/game/: Cargo.toml  game.py  main.rs  starts.txt
wifi-adapter/: Cargo.toml  README.md  build.rs  build.sh  memory.x  setenv
wifi-adapter/.cargo/: config
wifi-adapter/src/: main.rs
wifi-adapter/src/client/: mod.rs
wifi-adapter/src/server/: mod.rs
wifi-adapter/src/uart/: mod.rs
wifi-adapter/src/wifi/: mod.rs
