[package]
name = "bmr_wiregame"
version = "0.1.0"
authors = ["Teo Niemirepo <teo.niemirepo@tuni.fi>"]
description = "A wireless game for the course Bear Metal Rust"
edition = "2018"

[dependencies]
gd32vf103xx-hal = "0.4.0"
embedded-hal = "0.2.3"
nb = "0.1.2"
riscv = "0.6.0"
st7735-lcd = { version = "0.7", optional = true }

riscv-rt = "0.8.0"
panic-halt = "0.2.0"
embedded-graphics = "0.6"

[features]
lcd = ["st7735-lcd"]
