[package]
name = "bmr_wiregame"
version = "0.1.0"
authors = ["Teo Niemirepo <teo.niemirepo@tuni.fi>","Wilho-Pekka Ilvesmäki <wilho-pekka.ilvesmaki@tuni.fi>"]
description = "A wireless game for the course Bear Metal Rust"
edition = "2018"


[dependencies]
embedded-hal = "0.2.4"
# gd32vf103xx-hal = "0.4.0"
gd32vf103xx-hal = { path = "gd32vf103xx-hal/" }
nb = "0.1.2"
riscv = "0.6.0"

arrayvec = { version = "0.5.2", default-features = false }
st7735-lcd = { version = "0.7", optional = true }

riscv-rt = "0.8.0"
panic-halt = "0.2.0"
embedded-graphics = "0.6"

[features]
lcd = ["st7735-lcd"]

